# career

./: # UTF-8 고정.txt  .gitignore  2023년+ver+1대+1+금융+면접+대비+템플릿(1) (1).xlsx  2023년_ver_공공기관_행정직_면접_대비_템플릿(배포용).xlsx  250616 2025년 상반기 국민연금공단 자기소개서 피드백.docx  26-01-15_한국공정거래조정원(KOFAIR) 일반직 6급.docx  26-01-16_NH농협은행 6급초급_일반.docx  26-01-16_한국주택금융공사(HF) [일반전형]강원서부지사.docx  26-01-17_농협(농축협) 서울지역 농·축협_일반관리직.docx  26-03-04_국민건강보험공단(h·well) [일반]강원_행정 6급가.docx  26-03-12_건강보험심사평가원(HIRA) 행정직_사무 행정_6급가_일반.docx  26-03-17_국민연금공단(NPS) [일반전형-권역] 6급 사무직.docx  26-03-28_신한은행 일반직_일반.docx  26-05-27_우리은행 지역인재 (강원).docx  26-06-21_주택도시보증공사(HUG) 일반전형_금융·기금(강원).docx  26-06-21_주택도시보증공사(HUG) 일반전형_금융·기금(강원)_최종개선본_patina.docx  26-06-21_주택도시보증공사(HUG) 일반전형_금융·기금(강원)_최종상위권_patina.docx  457_사기업_면접_준비_파일_템플릿 (1).xlsx  IBK기업은행_자기소개서_최종본.docx  NH농협은행_6급_자기소개서_최종.docx  adsp.txt  mg_100qa_answers.docx  pyproject.toml  ssis.docx  건보 압축본.docx  건보 예상질문.docx  공단 학교교육.txt  교과목 가점.txt  국민연금 업무.txt  기업은행.docx  분수비교법.docx  사회보장정보원_자기소개서_최종본.docx  새마을금고.docx  서교공 자소서.docx  서시서.docx  서울교통공사 자소서.docx  소득 부과 건강보험료 조정 정산 제도.docx  원동아 면접 준비.docx  응용수리 템플릿.docx  지농 2026년.docx  (+3 more)
_workspace/: nonghyup_revised_final.docx  nonghyup_revised_final.md  nonghyup_user_revised.docx  nonghyup_user_revised_extracted.md  region_nonghyup_final_draft.md
career_pipeline/: __init__.py  __main__.py  application_execution.py  application_package.py  application_quality.py  artifacts.py  audit.py  candidate_selection.py  character_count.py  conflicts.py  contract_builder.py  copyeditor_adapter.py  copyeditor_batch_output_schema.json  cost_limit.py  (+45 more)
(+876 files in other folders)
