[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "career-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1",
  "pypdf>=5.0",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
